--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -10,7 +10,7 @@
     <h2>Zespół Redakcyjny</h2>
     <h3>Jan Kowalski</h3>
     <img src="images/panda_czerwona.jpg" alt="Panda czerwona" width="150">
-    <p style="font-size: 13pt;">Jan Kowalski to nasz utalentowany redaktor bloga, który jest zakochany w dźwiękach instrumentów
+    <p style="font-size: 12pt;">Jan Kowalski to nasz utalentowany redaktor bloga, który jest zakochany w dźwiękach instrumentów
         smyczkowych. Jego pasja do skrzypiec, altówek, wiolonczeli i innych instrumentów smyczkowych
         jest nie do zaprzeczenia. Jan jest wieloletnim muzykiem i entuzjastą, który nie tylko opisuje swiat
         muzyki smyczkowej, ale również aktywnie uczestniczy w wydarzeniach muzycznych oraz udziela
@@ -21,13 +21,54 @@
 
     <h3>Anna Nowak</h3>
     <img src="images/bialy_kotek.jpg" alt="Biały kotek" width="150">
-    <p style="font-size: 13pt;">Anna Nowak to nasza redaktorka specjalizująca się w dziedzinie muzyki klasycznej i opery, Jej pasja
+    <p style="font-size: 12pt;">Anna Nowak to nasza redaktorka specjalizująca się w dziedzinie muzyki klasycznej i opery, Jej pasja
         do muzyki klasycznej jest nie do opisania, a glos operowy zainspirowal ją do poglębiania wiedzy na
         temat tego wyjątkowego gatunku muzycznego. Anna ma wyksztalcenie muzyczne i wieloletnie
         doświadczenie jako wokalistka operowa, co czyni ją ekspertką w swojej dziedzinie. Jej artykuly i
         recenzje są pelne wrazliwości na niuanse i emocje, które towarzyszą wykonaniom operowym i
         koncertom symfonicznym. Dzięki Anninemu glębokiemu zrozumieniu muzyki klasycznej. będziesz
         mógl odkryć piękno tego niezwyklego gatunku muzycznego w jej fascynujących tekstach.</p>
+    <hr>
+    <h2>Popularne gatunki muzyczne</h2>
+    <ul>
+        <li>Rock</li>
+        <ul>
+            <li>Rock klasyczny</li>
+            <ul>
+                <li>Rock and roll</li>
+                <li>Rockabilly</li>
+            </ul>
+            <li>Hard Rock</li>
+            <li>Rock progresywny</li>
+            <ul>
+                <li>Rock symfoniczny</li>
+                <li>Rock neo-progresywny</li>
+            </ul>
+        </ul>
+        <li>Pop</li>
+        <ul>
+            <li>Pop rock</li>
+            <li>Pop punk</li>
+            <li>Pop alternatywny</li>
+            <li>Dance Pop</li>
+            <li>Indie Pop</li>
+            <ul>
+                <li>Pop alternatywny</li>
+                <li>Pop indie folk</li>
+            </ul>
+        </ul>
+        <li>Hip Hop</li>
+        <ul>
+            <li>East Coast Hip Hop</li>
+            <li>West Coast Hip Hop</li>
+            <li>Trap</li>
+            <li>Pop Rap</li>
+            <li>Conscious Hip Hop</li>
+            </ul>
+        <li>Muzyka klasyczna</li>
+        <li>Jazz</li>
+
+    </ul>
     
 </body>
 </html>
