--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jan Kowalski - muzyka to moja pasja</title>
 </head>
+
 <body>
     <h1>Melodia Świata - Twój Portal Muzyczny</h1>
     <h2>Zespół Redakcyjny</h2>
     <h3>Jan Kowalski</h3>
     <img src="images/panda_czerwona.jpg" alt="Panda czerwona" width="150">
-    <p style="font-size: 12pt;">Jan Kowalski to nasz utalentowany redaktor bloga, który jest zakochany w dźwiękach instrumentów
+    <p style="font-size: 12pt;">Jan Kowalski to nasz utalentowany redaktor bloga, który jest zakochany w dźwiękach
+        instrumentów
         smyczkowych. Jego pasja do skrzypiec, altówek, wiolonczeli i innych instrumentów smyczkowych
         jest nie do zaprzeczenia. Jan jest wieloletnim muzykiem i entuzjastą, który nie tylko opisuje swiat
         muzyki smyczkowej, ale również aktywnie uczestniczy w wydarzeniach muzycznych oraz udziela
@@ -21,7 +24,8 @@
 
     <h3>Anna Nowak</h3>
     <img src="images/bialy_kotek.jpg" alt="Biały kotek" width="150">
-    <p style="font-size: 12pt;">Anna Nowak to nasza redaktorka specjalizująca się w dziedzinie muzyki klasycznej i opery, Jej pasja
+    <p style="font-size: 12pt;">Anna Nowak to nasza redaktorka specjalizująca się w dziedzinie muzyki klasycznej i
+        opery, Jej pasja
         do muzyki klasycznej jest nie do opisania, a glos operowy zainspirowal ją do poglębiania wiedzy na
         temat tego wyjątkowego gatunku muzycznego. Anna ma wyksztalcenie muzyczne i wieloletnie
         doświadczenie jako wokalistka operowa, co czyni ją ekspertką w swojej dziedzinie. Jej artykuly i
@@ -64,11 +68,46 @@
             <li>Trap</li>
             <li>Pop Rap</li>
             <li>Conscious Hip Hop</li>
-            </ul>
+        </ul>
         <li>Muzyka klasyczna</li>
         <li>Jazz</li>
-
     </ul>
-    
+    <hr>
+    <h2>Terminarz wydarzeń</h2>
+    <table border="1">
+        <thead>
+            <tr>
+                <th colspan="2">Październik</th>
+            </tr>
+            <tr>
+                <th>Data</th>
+                <th>Koncerty</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="2">1 października</td>
+                <td>Koncert Rockowy w Parku, 19:00</td>
+            </tr>
+            <tr>
+                <td>Koncert Akustyczny w Kawiarni, 20:30</td>
+            </tr>
+            <tr>
+                <td>10 października</td>
+                <td>Koncert fortepianowy w Filharmonii, 19:30</td>
+            </tr>
+            <tr>
+                <td>15 października</td>
+                <td rowspan="3">Warsztaty muzyczne: Gra na gitarze, 14:00</td>
+            </tr>
+            <tr>
+                <td>22 października</td>
+            </tr>
+            <tr>
+                <td>29 października</td>
+            </tr>
+        </tbody>
+
 </body>
+
 </html>
